# Agent_CompoundInterest_Plan

./: .env.example  .gitignore  PHASE0-STATUS.md  PHASE1-STATUS.md  PHASE2-STATUS.md  README.md  SOUL.md  alembic.ini  bootstrap-windows.ps1  config.yaml.example  install-windows.cmd  install-windows.ps1  mcp.json.example  pyproject.toml  release-manifest.json
.github/workflows/: ci.yml  release.yml
cron/agent-jobs/: core-health-watch.example.json  daily-risk-brief.example.json
cron/script-jobs/: system-doctor.example.json
deploy/: Dockerfile  docker-compose.yml
deploy/systemd/: value-dca-agent.service
migrations/: env.py
migrations/versions/: 0001_phase0_runtime.py  0002_phase1_ledger.py  0003_opening_position.py  0004_market_nav.py  0005_market_data_sync.py  0006_market_nav_verification.py  0007_source_lineage.py  0008_allocation_policy.py
runtime/windows/: finalize-update-task.ps1  run-investor-core.ps1  run-powershell-hidden.vbs  update-value-dca.ps1
skills/value-dca-investor/: SKILL.md
src/investor_core/: __init__.py  config.py  database.py  health.py  hermes_config.py  ledger.py  logging_config.py  market_data.py  market_providers.py  market_sync.py  source_lineage.py
src/investor_mcp/: __init__.py  runtime.py  server.py
tests/: conftest.py  test_api.py  test_cli.py  test_hermes_config.py  test_ledger.py  test_logging_config.py  test_market_data.py  test_market_providers.py  test_market_sync.py  test_mcp_contract.py  test_mcp_runtime.py  test_migrations.py  test_safety_contracts.py  test_windows_runtime_contract.py
(+6 files in other folders)
