[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "value-dca-agent"
version = "0.6.0"
description = "Local-first deterministic core and Hermes integration for a personal value DCA assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp[cli]>=1.2,<2",
  "pydantic-settings>=2.9,<3",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
  "tzdata>=2026.3,<2027",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
  "types-pyyaml>=6,<7",
]

[project.scripts]
investor = "investor_core.cli.app:main"
investor-core = "investor_core.api.app:main"
investor-mcp = "investor_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/investor_core", "src/investor_mcp"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["investor_core", "investor_mcp"]
